test_regress/t/t_tri_struct_packed.out
%Error: t/t_tri_struct_packed.v:25: Verilog $stop
Aborting...
